--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,6 +15,8 @@ sites:
     url: https://www.owlting.com/owljourney
   - name: Owlnews
     url: https://www.owlting.com/news
+  - name: Owlting NFT
+    url: https://nft.owlting.com/api/tokens/69
   - name: Owlting Portal
     url: https://www.owlting.com/portal
   - name: Owlpay Portal
