--- a/.github/workflows/graphs.yml
+++ b/.github/workflows/graphs.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   release:
     name: Generate graphs
-    runs-on: self-hosted,linux
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v2.3.3
