--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,24 +3,29 @@ owner: OwlTing # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Owlting Market
-    url: https://www.owlting.com/market
-  - name: Owlnest Booking Engine
-    url: https://booking.owlting.com
-  - name: Owlnest API
+  - name: OwlNest - API
     url: https://api.owlting.com/booking/admin/version
-  - name: Owlting Experiences
-    url: https://www.owlting.com/experiences
-  - name: Owljourney
+  - name: OwlNest - Booking Engine
+    url: https://booking.owlting.com
+  - name: OwlJourney
     url: https://www.owlting.com/owljourney
-  - name: Owlnews
+    icon: https://www.google.com/favicon.ico
+  - name: OwlTing Market
+    url: https://www.owlting.com/market
+  - name: OwlTing Experiences
+    url: https://www.owlting.com/experiences
+  - name: OwlNews
     url: https://www.owlting.com/news
-  - name: Owlting NFT
+  - name: OwlTing NFT
     url: https://nft.owlting.com/api/tokens/69
-  - name: Owlting Portal
+  - name: OwlTing Portal
     url: https://www.owlting.com/portal
-  - name: Owlpay Portal
+  - name: OwlPay Portal
     url: https://owlpay.com
+  - name: OBS Portal
+    url: https://www.owlting.com/obs/
+  - name: OwlTing Blog
+    url: https://blog.owlting.com/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
